--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ main{
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 80%;
+    width: 100%;
     height: 1.2em;
     background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%);
   }
@@ -210,6 +210,7 @@ transition: all 0.3s;
 }
 
 .post-content .post-title{
+    min-height:7rem;
     font-size:3.6rem;
     background-color:white;
     text-align:center;
@@ -225,10 +226,66 @@ transition: all 0.3s;
     color:#08a5cb;
     cursor:default;
 }
+
+/*** Comments**/
+.comments {
+    overflow:hidden;
+    transition: all 2s ease-in-out;
+}
+.comments > li{
+    margin-bottom:2rem;
+    padding-bottom:1rem;
+    border-bottom: 1px solid #e9ebee;
+    transition: opacity 2s;
+    opacity: 0;
+}
+.comments > li.fade-in{
+    opacity:1;
+}
 .comments-title{
+    position:relative;
     margin: 2rem 0 1rem;
     padding-bottom:1rem;
     border-bottom: 1px solid #e9ebee;
+}
+.btn-comments{
+    position:absolute;
+    text-transform: capitalize;
+    right:0rem;
+    bottom:0;
+    font-size:1rem;
+    padding:1rem;
+    padding-right:2.2rem;
+    opacity: 0.7;
+    transition: all 0.3s;
+}
+.btn-comments:hover{
+    opacity:1;
+}
+.btn-comments:after{
+    position:absolute;
+    right:0.4rem;
+    bottom:50%;
+    transform:translate(0,75%);
+    display:block;
+    content:"";
+    border: 0.7rem solid transparent;
+    transition: all 0.7s;
+}
+.btn-comments.show:after{
+    border-top-color:#666666;
+}
+.btn-comments.hide:after{
+    transform: translate(0,25%);
+    border-bottom-color:#666666;
+}
+.comment-name{
+    color:#08a5cb;
+    margin-bottom:0.5rem;
+}
+.comment-email{
+    color:grey;
+    margin-top:0.5rem;
 }
 
 footer{
