--- a/styles.css
+++ b/styles.css
@@ -22,15 +22,82 @@ body{
     position:relative;
     min-height:100%;
     background-color:white;
-    padding-bottom:4rem; /* footer hight */
+    padding-bottom:2.5rem; /* footer hight */
 }
 header{
     height:5rem;
-    background-color:blue;
+    background-color:white;
     position:sticky;
     z-index:20;
     top:0;
 }
+
+header:after{
+    width:90%;
+    content:"";
+    position:absolute;
+    left:5%;
+    bottom:0.8rem;
+    border-bottom:1px solid #3e3b3b;;
+}
+
+.social-media-icons{
+    display:flex;
+    position:absolute;
+    right:1rem;
+    top:1rem;
+}
+
+.social-media-icons li{
+    margin-right:0.5rem;
+    font-size:1.4rem;
+    cursor:pointer;
+    perspective:100px;
+}
+.social-media-icons li i{
+    transform-style: preserve-3d;
+    transition: all 0.3s;
+    opacity:0.7;
+}
+.social-media-icons li i:hover{
+    transform: translate3d(0, 0,25px);
+    opacity:1;
+
+}
+
+.navigation-bar{
+    position: relative;
+    left:5%;
+    top:50%;
+    transform: translate(0,-40%);
+    width:65%;   
+}
+
+.navigation-bar ul{
+    display: flex;
+    justify-content:space-between;
+    font-size:1.5rem;
+    letter-spacing:0.2rem;
+    font-weight:900;
+    text-shadow: 0 0 1rem black;
+}
+.navigation-bar ul li{
+    text-transform: capitalize;
+    color: #3e3b3b;
+    transition: all 0.3s;
+    cursor:pointer;
+    -moz-user-select: none;
+    user-select:none;
+}
+.navigation-bar ul li:hover{
+    color:black;
+    text-shadow: 0 0 1rem orange;
+}
+.navigation-bar ul li.active{
+    color:black;
+}
+
+
 main{
    
 }
@@ -291,11 +358,23 @@ transition: all 0.3s;
 footer{
     position:absolute;
     width:100%;
-    height:4rem;
+    height:2.5rem;
     bottom:0;
-    background-color:green;
+    background-color:white;
+    
 }
 
+footer >h6{
+    position:absolute;
+    right:1rem;
+    bottom:0.7rem;
+    font-weight:300;
+
+}
+footer .data-source{
+    font-weight:700;
+    text-decoration:none;
+}
 
 
 /** Loading animation */
